# ctru-rs-old

./: Cargo.toml  README.md
alloc_system/: Cargo.toml
alloc_system/src/: lib.rs
ctr-std/src/: alloc.rs  path.rs
ctr-std/src/ffi/: c_str.rs
ctr-std/src/os/: mod.rs
ctr-std/src/os/linux/: fs.rs
ctr-std/src/sys/unix/: mod.rs  net.rs  os.rs  pipe.rs  process.rs  thread_local.rs
ctr-std/src/sys/unix/ext/: mod.rs
ctru-rs/: Cargo.toml
ctru-sys/: Cargo.toml
ctru-sys/src/: lib.rs  os.rs  sdmc.rs  svc.rs  synchronization.rs
ctru-sys/src/gpu/: shaderProgram.rs  shbin.rs
ctru-sys/src/services/: am.rs  apt.rs  cam.rs  fs.rs  gspgpu.rs  httpc.rs  mvd.rs  qtm.rs  y2r.rs
ctru-sys/src/sys/: lock.rs
src/: console.rs  gfx.rs  lib.rs  panic.rs  sdmc.rs  srv.rs
src/services/: apt.rs  gspgpu.rs  hid.rs
std/: Cargo.toml
