[package]
authors = ["Ronald Kinard <furyhunter600@gmail.com>"]
build = "build.rs"
description = "A safe wrapper around smealum's ctrulib."
license = "https://en.wikipedia.org/wiki/Zlib_License"
links = "ctru"
name = "ctru-rs"
version = "0.5.0"

[dependencies]
ctr-std = { git = "https://github.com/FenrirWolf/ctr-std" }
ctr-libc = { git = "https://github.com/FenrirWolf/ctr-libc" }

[dependencies.ctru-sys]
path = "ctru-sys"

[lib]
crate-type = ["rlib"]
name = "ctru"
